; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_sound.c_Sound_Exit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_sound.c_Sound_Exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Sound_enabled = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8
@process_buffer = common dso_local global i32* null, align 8
@sync_buffer = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Sound_Exit() #0 {
  %1 = load i64, i64* @Sound_enabled, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = call i32 (...) @PLATFORM_SoundExit()
  %5 = load i64, i64* @FALSE, align 8
  store i64 %5, i64* @Sound_enabled, align 8
  %6 = load i32*, i32** @process_buffer, align 8
  %7 = call i32 @free(i32* %6)
  store i32* null, i32** @process_buffer, align 8
  br label %8

8:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @PLATFORM_SoundExit(...) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
